--- a/index.html
+++ b/index.html
@@ -6,51 +6,62 @@
     <meta name="description" content="My first personal website all about me!">
     <meta name="viewport" content="width=device-width, initial scale=1.0">
     <title>My personal Website</title>
-    <link rel="stylesheet" href="styles.css">
   </head>
   
   <body>
+    <header>
     <center><h1 class="title" id="Top-Title">All About Me!</h1>
     <h3 class="title">By Alessandro Gregori</h3></center>
+    </header>
     <hr>
+    <main>
+      <section>
+        <article>
     <h2>About My Family:</h2>
     <p>I am the youngest in my immediate family. I have an older brother named Lorenzo, who is in college right now so I do not see him often. My parents names are Giovanni (Dad) and Nell (Mom).</p>
     <img src="https://media.gettyimages.com/photos/rear-view-of-a-family-watching-tv-on-sofa-at-home-picture-id1066472014?s=2048x2048" alt="Family Pic">
    <p>I have an uncle, an aunt, and three cousins from my dad's side who live in Italy. I see them often, usually every year during the summer, when me, my brother, and my dad travel to Italy for a few weeks.</p>
+        </article>
+      </section>
    <br>
     <hr>
+      <section>
+        <article>
     <h2>My hobbies and things I enjoy to do!</h2>
     <p>There are many things that I enjoy to do, such as:</p>
     <ul>
-      <b><li>Sailing</li>
-      <li>Skiing</li>
-      <li>Climbing</li>
-      <li>Playing Video Games</li></b>
+      <b><li class="li">Sailing</li>
+      <li class="li">Skiing</lic>
+      <li class="li">Climbing</li>
+      <li class="li">Playing Video Games</li></b>
     </ul>
-    <div class="Div-sailing">
+        </article>
+    <article class="Div-sailing">
     <h4 class="Sailing">Sailing:</h4>
     <p class="Sailing">When I was less than six years old, my brother used to sail. Many times I would go to the ckub that he went to to watch him and be with him. Once I got old enough to sail myself, I started immediately. I started when I was seven years old, and continued sailing until I was twelve. When I was twelve I had gotten too big for the boat that I had been sailing, so for a month or two I stopped, until I joined another program with a larger boat, that I am doing still now. Some notable things I accomplished while sailing is winning a few regattas (competitions for sailing) and even competing once when I was nine at the U.S youth championships.</p>
     <img class="sailing-pic" src="https://media.gettyimages.com/photos/sailing-boat-on-sea-picture-id1204625270?s=2048x2048" alt="Sailing pic">
-    </div>
-     <div class="Div-skiing">
+    </article>
+     <article class="Div-skiing">
     <h4 class="Skiing">Skiing:</h4>
     <p class="Skiing">Every winter except for the past three years, I went to Utah for a week to ski and see some extended family who live there. it had always been something I enjoyed extremely, because the feeling of being alone on top of a mountain going high speed is like nothing I had never experienced anywhere else. Unfortunately between Covid and other reasons I have not been able to ski recently and I am extremely sad about that.</p>
     <img class="skiing-pic" src="https://media.gettyimages.com/photos/powder-skiing-picture-id623108528?s=2048x2048" alt="Skiing pic">
-    </div>
-    <div class="Div-climbing">
+    </article>
+    <article class="Div-climbing">
       <h4 class="climbing">Climbing:</h4>
     <p class="climbing">I rarely go climbing, but when I do, I enjoy it very much. I sometimes go to a climbing gym which is about an hour drive from my house that has several different walls, but because of Covid, I havent gone recently. Back when I went, I considered myself decent at it, as I was able to do basically all of the vertical walls, and even some of the ones past ninety-degrees, but I was unable to do any of the expert walls.
     </p>
     <img class="climbing-pic" src="https://media.gettyimages.com/photos/low-angle-view-of-athletic-man-climbing-on-the-wall-in-a-gym-picture-id939460884?s=612x612" alt="Climbing pic">
-    </div>
-    <div class="Div-video">
+    </article>
+    <article class="Div-video">
     <h4 class="videogames">Playing VideoGames:</h4>
     <p class="videogames">Every since my brother started playing video games when I was little, I became enamored with them. The moment my mom let me get a console, I got one, and begun to play with my friends almost every day. When I turned thirteen, I got a gaming laptop, and begun to start gaming competitevely, and I actually got quite good at it. Recently there haven't been any good games, but my all time favorites have to be Titanfall 2 and Cod: Modern Warfare 2019.
     </p>
     <img class="video-game-pic" src="https://media.istockphoto.com/photos/gamer-work-space-concept-top-view-a-gaming-gear-mouse-keyboard-in-picture-id1170073824?k=20&m=1170073824&s=612x612&w=0&h=lQYUGw9IIqI9bsTrIrS8xCyId2PmmNYPSwB7UNEzssI=" alt="Gaming pic">
-      </div>
+      </article>
+      </section>
     <br>
       <hr>
+      <section>
       <h2 class="list" id="list-title">My Favorite Subjects:</h2>
       <ol class="list">
         <li>Science <i>(Chemistry)</i></li>
@@ -60,6 +71,19 @@
         <li>Programming</li>
         <li>Foreign Language <i>(Spanish)</i></li>
         <li>Inquiry Skills</li>
-        <li>Math <i>(Algebra 2)</i>
+        <li>Math <i>(Algebra 2)</i></li>
+          </ol>
+      </section>
+    </main>
+      <br>
+    <hr>
+      <details>
+        <summary>A Funny Vid I Like</summary>
+         <footer class="vid-section">
+           <figure>
+             <figcapture><h2>Funny Video</h2></figcapture>
+           <video controls src="https://github.com/Ale-Gregori/audio/blob/main/video.mp4?raw=true">
+           </figure>
+         </footer>
    </body>
 </html>
