--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="author" content="Alessandro Gregori">
     <meta name="description" content="My first personal website all about me!">
     <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>My personal Website</title>
   </head>
   
